# duckpass

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.codegraph/: daemon.pid
.github/workflows/: linux-build.yml
completions/: _duckpass  duckpass.bash
include/duckpass/: add_command.h  audit_command.h  audit_engine.h  clipboard_handler.h  command_registry.h  commands.h  completion_command.h  config_handler.h  crypto.h  delete_command.h  entropy_evaluator.h  exceptions.h  export_command.h  generate_command.h  get_command.h  hibp_checker.h  icommand.h  init_command.h  json_secure.h  list_command.h  local_storage.h  rekey_command.h  secure_allocator.h  shell_command.h  terminal_utils.h  utils.h  vault.h
src/: add_command.cpp  audit_command.cpp  audit_engine.cpp  clipboard_handler.cpp  command_registry.cpp  commands.cpp  completion_command.cpp  config_handler.cpp  crypto.cpp  delete_command.cpp  entropy_evaluator.cpp  export_command.cpp  generate_command.cpp  get_command.cpp  hibp_checker.cpp  init_command.cpp  list_command.cpp  local_storage.cpp  main.cpp  rekey_command.cpp  shell_command.cpp  terminal_utils.cpp  utils.cpp  vault.cpp
tests/: audit_tests.cpp
